<resources>
    <string name="notification_channel_id">Car AC Repair Android Notification</string>
    <string name="app_name">Car AC Repair</string>
    <string name="car_shop_name">Bengkel Alex AC</string>
    <string name="desc_onboarding">Bergabunglah dengan kami untuk menemukan bengkel terdekat dengan layanan AC mobil berkualitas. Temukan, booking, dan nikmati perawatan AC yang mudah dan efisien untuk kendaraan Anda.</string>
    <string name="create_account">Buat Akun</string>
    <string name="sign_in">Masuk</string>
    <string name="create_your_account_now">Buat Akunmu Sekarang !</string>
    <string name="input_name">Masukkan Nama</string>
    <string name="name">Nama</string>
    <string name="phone_number">Nomor HP</string>
    <string name="input_phone_number">Masukkan Nomor HP</string>
    <string name="password">Password</string>
    <string name="input_password">Masukkan Password</string>
    <string name="confirmation_password">Konfirmasi Password</string>
    <string name="input_confirmation_password">Masukkan Konfirmasi Password</string>
    <string name="already_have_an_account">Sudah punya akun?</string>
    <string name="dont_have_an_account_yet">Belum punya akun?</string>
    <string name="sign_in_here">Masuk disini</string>
    <string name="create_account_here">Buat akun disini</string>
    <string name="desc_login_greeting">Selamat Datang di Bengkel Alex AC! Silakan login untuk memulai perjalanan perawatan kendaraan Anda.</string>
    <string name="title_greeting">Haiiii</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="title_forgot_password">Lupa Password?</string>
    <string name="desc_forgot_password">Silakan masukkan nomor HP Anda dan kami akan membantu Anda mengembalikan akses ke akun Anda.</string>
    <string name="reset_password">Reset Password</string>
    <string name="otp_verification">Verifikasi OTP</string>
    <string name="desc_otp_verification">Kami telah mengirimkan kode OTP ke WhatsApp Anda. Masukkan kode tersebut untuk melanjutkan.</string>
    <string name="verify">Verifikasi</string>
    <string name="otp_not_received_yet">Kode OTP belum masuk?</string>
    <string name="resend">Kirim Ulang</string>
    <string name="desc_reset_password">Masukkan password baru dan konfirmasi untuk menyelesaikan proses reset.</string>
    <string name="new_password">Password Baru</string>
    <string name="input_new_password">Masukkan Password Baru</string>
    <string name="confirmation_new_password">Konfirmasi Password Baru</string>
    <string name="title_account_successfully_created">Akunmu Berhasil Dibuat !</string>
    <string name="desc_account_successfully_created">Registrasi Berhasil! Selamat, Anda telah resmi terdaftar di Bengkel Alex AC. Nikmati kemudahan dalam memesan layanan perawatan kendaraan dengan hanya beberapa klik saja.</string>
    <string name="back">Kembali</string>
    <string name="title_password_successfully_edited">Password Berhasil Diubah !</string>
    <string name="desc_password_successfully_edited">Perubahan Password Berhasil! Password baru Anda telah disimpan. Anda sekarang dapat menggunakan password baru ini untuk login ke akun Anda dan melanjutkan menikmati layanan kami.</string>
    <string name="home">Beranda</string>
    <string name="repair_shop">Bengkel</string>
    <string name="history">Riwayat</string>
    <string name="profile">Profil</string>
    <string name="title_on_progress_service">Service yang Sedang Berjalan</string>
    <string name="title_last_service">Service Terakhir</string>
    <string name="title_our_repair_shop">Bengkel Kita</string>
    <string name="title_activity_history">Riwayat Aktivitas</string>
    <string name="title_edit_profile">Ubah Profil</string>
    <string name="title_change_password">Ubah Password</string>
    <string name="title_my_address">Alamat Saya</string>
    <string name="title_my_car">Mobil Saya</string>
    <string name="title_about_app">Tentang Aplikasi</string>
    <string name="sign_out">Keluar</string>
    <string name="title_repair_shop_detail">Detail Bengkel</string>
    <string name="title_repair_shop_location">Lokasi Bengkel</string>
    <string name="title_change_data">Ubah Data</string>
    <string name="title_add_address">Tambah Alamat</string>
    <string name="title_no_address_yet">Belum Ada Alamat</string>
    <string name="desc_no_address">Anda belum menambahkan alamat. Tambahkan alamat baru untuk memudahkan layanan kami.</string>
    <string name="title_address_detail">Detail Alamat</string>
    <string name="title_address_label">Label Alamat</string>
    <string name="input_address_label">Masukkan Label Alamat</string>
    <string name="title_address_location">Titik Lokasi Alamat</string>
    <string name="input_location_address">Masukkan Alamat</string>
    <string name="title_address">Alamat</string>
    <string name="title_address_notes_optional">Catatan Alamat (Opsional)</string>
    <string name="input_address_notes">Masukkan Catatan Alamat</string>
    <string name="title_save">Simpan</string>
    <string name="title_add_car">Tambah Mobil</string>
    <string name="title_no_car_yet">Belum Ada Mobil</string>
    <string name="desc_no_car">Anda belum menambahkan mobil. Tambahkan mobil Anda untuk memulai pemesanan layanan.</string>
    <string name="title_car_name">Nama Mobil</string>
    <string name="title_input_car_name">Masukkan Nama Mobil</string>
    <string name="title_car_license_number">Plat Mobil</string>
    <string name="title_input_car_license_number">Masukkan Plat Mobil</string>
    <string name="title_input_car_year">Masukkan Tahun Mobil</string>
    <string name="title_car_year">Tahun Mobil</string>
    <string name="title_car_detail">Detail Mobil</string>
    <string name="title_old_password">Password Lama</string>
    <string name="title_new_password">Password Baru</string>
    <string name="title_confirmation_password">Konfirmasi Password</string>
    <string name="title_service_detail">Detail Service</string>
    <string name="title_service_status">Status Service</string>
    <string name="title_pay">Bayar</string>
    <string name="title_reschedule_service">Ubah Jadwal Service</string>
    <string name="label_service">Service:</string>
    <string name="label_repair_shop">Bengkel:</string>
    <string name="label_complaint">Keluhan:</string>
    <string name="label_order_type">Tipe pesanan:</string>
    <string name="label_mechanic">Mekanik:</string>
    <string name="label_status">Status:</string>
    <string name="distance_traveled">Jarak yang ditempuh:</string>
    <string name="title_change_profile">Ubah Profil</string>
    <string name="title_input_old_password">Masukkan Password Lama</string>
    <string name="title_input_new_password">Masukkan Password Baru</string>
    <string name="title_input_confirmation_password">Masukkan Konfirmasi Password</string>
    <string name="title_input_confirmation_new_password">Masukkan Konfirmasi Password Baru</string>
    <string name="title_order_service">Reservasi Service</string>
    <string name="title_deliver_car">Antar Mobil</string>
    <string name="title_pickup_car">Jemput Mobil</string>
    <string name="title_car">Mobil</string>
    <string name="title_choose_car">Pilih Mobil</string>
    <string name="title_car_distance">Kilometer Saat Ini</string>
    <string name="title_input_car_distance">Masukkan Kilometer Saat Ini</string>
    <string name="title_choose_address">Pilih Alamat</string>
    <string name="title_complaint">Keluhan</string>
    <string name="input_complaint">Masukkan Keluhan</string>
    <string name="title_repair_shop">Bengkel</string>
    <string name="choose_repair_shop">Pilih Bengkel</string>
    <string name="choose_service_date">Pilih Tanggal Service</string>
    <string name="title_service_date">Jadwal Service</string>
    <string name="title_location_on_the_maps">Cek Lokasi di Maps</string>
    <string name="title_choose">Pilih</string>
    <string name="title_change">Ubah</string>
    <string name="title_upload_proof_of_payment">Unggah Bukti Pembayaran</string>
    <string name="title_service_payment">Pembayaran Service</string>
    <string name="title_payment_detail">Detail Pembayaran</string>
    <string name="title_payment_total">Total Pembayaran</string>
    <string name="title_change_image">Ubah Gambar</string>
    <string name="title_choose_payment_proof_image">Pilih Gambar Bukti Pembayaran</string>
    <string name="title_upload">Unggah</string>
    <string name="title_proof_image_successfully_uploaded">Bukti Pembayaran Berhasil Diunggah!</string>
    <string name="desc_proof_image_successfully_uploaded">Terima kasih, bukti pembayaran Anda telah berhasil diunggah. Kami akan segera memverifikasi pembayaran Anda dan mengonfirmasi pesanan Anda dalam waktu dekat. Harap tunggu konfirmasi lebih lanjut dari kami.</string>
    <string name="desc_contact_admin_from_repair_shop_detail">Halo Admin, saya butuh bantuan nih untuk layanan di bengkel %s. Bisa dibantu?</string>
    <string name="desc_install_whats_app_first">Install whatsApp terlebih dahulu</string>
    <string name="desc_contact_admin_from_service_detail">Halo Admin, aku butuh bantuan terkait order service yang sudah aku lakukan di %s. Order ID-ku adalah %s. Ada beberapa hal yang ingin aku tanyakan dan klarifikasi. Bisa dibantu?</string>
    <string name="title_choose_location">Pilih Lokasi</string>
    <string name="title_profile_successfully_updated">Data Profil Berhasil Diubah!</string>
    <string name="desc_profile_successfully_updated">Selamat! Profil Anda telah berhasil diubah. Perubahan yang Anda lakukan telah disimpan dengan sukses. Jika ada informasi lain yang perlu diperbarui, jangan ragu untuk mengubahnya kapan saja.</string>
    <string name="desc_no_on_progress_services">Anda belum memiliki service yang sedang berjalan. Silakan pilih dan pesan layanan yang Anda butuhkan untuk melihatnya di sini.</string>
    <string name="desc_no_last_services">Belum ada layanan yang telah selesai. Anda dapat memesan layanan perawatan atau perbaikan kendaraan kapan saja melalui aplikasi kami.</string>
    <string name="title_oops_there_is_problem">Oops! Ada Masalah</string>
    <string name="title_reload">Muat Ulang</string>
    <string name="title_see_detail">Lihat Detail</string>
    <string name="title_service_successfully_booking">Reservasi Service Berhasil Dibuat!</string>
    <string name="desc_service_successfully_booking">Berhasil! Reservasi service Anda telah kami terima dan tinggal menunggu antrian. Kami akan segera memprosesnya. Terima kasih telah menggunakan layanan kami.</string>
    <string name="title_no_booking_yet">Belum Ada Riwayat Service</string>
    <string name="desc_no_booking_yet">Tidak ada riwayat service yang tercatat. Mulailah memesan layanan perawatan atau perbaikan kendaraan Anda melalui aplikasi kami.</string>
    <string name="title_deliver_to_repair_shop">Antar/Ambil sendiri ke Bengkel</string>
    <string name="title_pick_up_from_repair_shop">Pelayanan Antar/Jemput dari Bengkel</string>
    <string name="title_service_successfully_rescheduled">Jadwal Service Berhasil Diubah!</string>
    <string name="desc_service_successfully_rescheduled">Jadwal Service Diperbarui! Kami telah berhasil mengubah jadwal service Anda. Terima kasih atas kepercayaan Anda dan kami siap melayani pada waktu yang baru.</string>
    <string name="desc_remove_data">Menghapus data ini akan menghapusnya secara permanen dari sistem. Konfirmasi untuk melanjutkan atau batalkan untuk mempertahankan data.</string>
    <string name="title_remove_data">Hapus Data?</string>
    <string name="title_dont_remove">Tidak, Jangan Hapus</string>
    <string name="title_yes_remove_now">Ya, Hapus Sekarang</string>
    <string name="title_camera">Kamera</string>
    <string name="title_gallery">Galeri</string>
    <string name="desc_sign_out">Apakah Anda yakin ingin logout? Anda perlu login kembali untuk mengakses akun Anda.</string>
</resources>